k8s/dayplanner-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dayplanner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: backend
          image: 334894867020.dkr.ecr.us-east-2.amazonaws.com/dayplanner-backend:IMAGE_TAG
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dayplanner
spec:
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
